fixed gap on small devices

--- a/assets/sass/base/_grid.scss
+++ b/assets/sass/base/_grid.scss
@@ -105,6 +105,18 @@
   }
 }
 
+//fix the gap when it gets too small
+//even if everything collpases, the browser expects 12 gaps of 30 pixels of room to exist. and adding container gutters brings us to 420. below this the grid won fit unless we lower the gap.
+@media(max-width: 420px){
+  .grid{
+    grid-gap: 20px;
+  }
+}
+
+.grid.no-gutters{
+  grid-gap: 0;
+}
+
 .span-full {
   grid-column: 1 / -1;
   flex-basis: 100%;
